...
  const memoizedPokemonList = useMemo(() => pokemonList, [pokemonList]);

  return (
    <View style={styles.container}>
      <View style={styles.inputContainer}>
        <TextInput
          testID="searchBox"
          style={styles.textInput}
          value={searchTerm}
          placeholder="Search Pokemon"
          onChangeText={text => setSearchTerm(text)}
        />
        <Button testID="clearBtn" title="Clear" onPress={onClear} />
      </View>
      <FlatList
        testID="pokemonList"
        keyExtractor={item => item.name}
        style={styles.container}
        data={memoizedPokemonList}
...
